V6.0.4
* Fixed SQL error in MySQL/ mh_Bounties
* Fixed Ticket 409 (https://github.com/Rocologo/MobHunting/issues/409)
V6.0.3
* Removed hard dependency for WorldEdit
* Added possibility to disable integration to WorldEdit in config.yml
* Temporary fix for players being disconneted if grinding is detected. ProtocolLib was using to mark the area / circle with small flames, but this does not work at the moment. The feature is disabled in config.yml. (protocollib.show_grinding_area_using_protocollib_temp: false)  
V6.0.2
* Default message_type values added. You can now decide where the "kill message","Money message" and "Head message" will be displayed. Possible Values are: Chat, ActionBar, BassBar, Title, Subtitle or None. None if you dont want any message.
* Fix bug: Trident detected as fists - Ticket 420 (https://github.com/Rocologo/MobHunting/issues/420) 
* Fixed ticket 421 error when ProtocolLib is not installed. (https://github.com/Rocologo/MobHunting/issues/421)
V6.0.1
* For Bounty users - fixed SQL bug (https://github.com/Rocologo/MobHunting/issues/412)
* Removed a "null" message when clicking a non MobHunting head on a MC 1.13 server
* Added support for WorldGuard 7.0.0
* Added support for WorldEdit 7.0.0 
* Custom WorldGuard flag MobHunting - tested and fixed. 
* Support for Disguises fixed.
V6.0.0 Minecraft 1.13 release
* This version is only for MC 1.13
* Dolphin, Drowned, Phantom, Turtle and Fish (as a Mob) added with rewards and Mob heads to be dropped
* BagOfGold uses MUST upgrade to V2.0.0 (https://fractal.lindegaard.one:8181/job/BagOfGold/)
V5.7.3
*
V5.7.2
* Minor change
V5.7.1
* Fixed Ticket 409 (https://github.com/Rocologo/MobHunting/issues/409)
* Changed how data was stored in the database (Same order as they were inserted).
V5.7.0
* Fixed bStarts.org redirecting 
* BagOfGold balance fixed when changing gamemode - PerWorldInventory is mandatory if you change worlds/gamemode
V5.6.9
* Fixed bStarts.org reporting
V5.6.7